# mimmo

./: .gitmodules  CHANGELOG.md  CMakeLists.txt
examples/: geohandlers_example_00003.cpp  manipulators_example_00003.cpp
geodata/: planarquads.vtu  planarquads_mimmo.vtu  prova.stl
src/core/: BaseManipulation.cpp  BaseManipulation.hpp  BasicShapes.cpp  BvTree.cpp  IOConnections.cpp  IOConnections.hpp  InOut.cpp  InOut.hpp  InOut.tpp  Lattice.cpp  Lattice.hpp  MimmoNamespace.cpp  MimmoNamespace.hpp  MimmoObject.cpp  MimmoObject.hpp  mimmo_core.hpp
src/geohandlers/: ClipGeometry.cpp  ClipGeometry.hpp  GenericSelection.cpp  MeshSelection.hpp  OverlapScalarFields.cpp  OverlapVectorFields.cpp  OverlappingFields.hpp  ReconstructFields.hpp  ReconstructScalar.cpp  ReconstructVector.cpp  SelectionByBox.cpp  SelectionByBoxWithScalar.cpp  SelectionByCylinder.cpp  SelectionByMapping.cpp  SelectionByPID.cpp  SelectionBySphere.cpp  SplitFields.cpp  SplitFields.hpp  SplitScalarField.cpp  SplitVectorField.cpp  StitchGeometry.cpp  StitchGeometry.hpp
src/iocgns/: CGNSPidExtractor.cpp  CGNSPidExtractor.hpp  IOCGNS.cpp  IOCGNS.hpp
src/iogeneric/: GenericDispls.cpp  GenericDispls.hpp  GenericInput.cpp  GenericInput.hpp  GenericOutput.cpp  GenericOutput.hpp  IOCloudPoints.cpp  IOCloudPoints.hpp  MimmoGeometry.cpp  MimmoGeometry.hpp  MultipleMimmoGeometries.cpp  MultipleMimmoGeometries.hpp
src/ioofoam/: IOOFOAM.cpp  IOOFOAM.hpp
src/iovtk/: IOVTKScalar.cpp  IOVTKScalar.hpp
src/manipulators/: Apply.cpp  Apply.hpp  BendGeometry.cpp  BendGeometry.hpp  FFDLattice.cpp  FFDLattice.hpp  MRBF.cpp  MRBF.hpp  MultiApply.cpp  MultiApply.hpp  RotationGeometry.cpp  RotationGeometry.hpp  ScaleGeometry.cpp  ScaleGeometry.hpp  TranslationGeometry.cpp  TranslationGeometry.hpp  TwistGeometry.cpp  TwistGeometry.hpp
src/utils/: ControlDeformExtSurface.cpp  ControlDeformExtSurface.hpp  ControlDeformMaxDistance.cpp  ControlDeformMaxDistance.hpp  CreateSeedsOnSurface.cpp  CreateSeedsOnSurface.hpp  OBBox.cpp  OBBox.hpp  ProjectCloud.cpp  ProjectCloud.hpp  RBFBox.cpp  RBFBox.hpp  RotationAxes.cpp  RotationAxes.hpp  SpecularPoints.cpp  SpecularPoints.hpp  TranslationPoint.cpp  TranslationPoint.hpp
test/core/: test_core_00002.cpp  test_core_00003.cpp
test/geohandlers/: test_geohandlers_00001.cpp  test_geohandlers_00002.cpp
test/iogeneric/: CMakeLists.txt  test_iogeneric_00001.cpp  test_iogeneric_00004.cpp
test/utils/: test_utils_00002.cpp
worklaura/: CMakeLists.txt  myClass.cpp  myHeader.hpp  test_example.cpp  testmain.cpp
